service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vbbu-service
spec:
  selector:
    app: vbbu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
